# zk-circuits

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  create-release-proposal.yml  create-release-tag-and-publish.yml
aggregator/: Cargo.toml
aggregator/benches/: aggregator.rs
aggregator/src/: aggregator.rs  circuit.rs  lib.rs
benches/: Cargo.toml
benches/benches/: aggregator.rs  bench.rs  prover.rs
benches/src/: lib.rs
circuit/: Cargo.toml
circuit-common/: Cargo.toml
circuit-common/src/: circuit.rs  utils.rs
circuit/src/: amounts.rs  circuit.rs  codec.rs  exit_account.rs  gadgets.rs  inputs.rs  lib.rs  nullifier.rs  storage_proof.rs  substrate_account.rs  test_helpers.rs  unspendable_account.rs  utils.rs  vote.rs
common/: Cargo.toml
common/src/: circuit.rs  gadgets.rs  utils.rs
ml-dsa/: Cargo.toml
ml-dsa/src/: constants.rs  lib.rs  main.rs  polynomial.rs
prover/: Cargo.toml
prover/benches/: prover_bench.rs  prover_benchmarks.rs
prover/src/: lib.rs  prover.rs
tests/: Cargo.toml
tests/benches/: prover.rs
tests/src/: circuit_helpers.rs  lib.rs  test_helpers.rs
tests/src/aggregator/: circuit_tests.rs
tests/src/circuit/: circuit_helpers.rs  mod.rs  nullifier_tests.rs  storage_proof_tests.rs  substrate_account_tests.rs  test_helpers.rs  unspendable_account_tests.rs  utils_tests.rs
tests/src/prover/: prover_tests.rs
tests/src/verifier/: verifier_tests.rs
verifier/: Cargo.toml
verifier/benches/: verifier.rs  verifier_bench.rs  verifier_benchmarks.rs
verifier/src/: lib.rs  verifier.rs
vote-circuit/: Cargo.toml
vote-circuit/src/: lib.rs
voting/: Cargo.toml
voting/src/: lib.rs
wormhole/: README.md
wormhole/aggregator/: Cargo.toml
wormhole/aggregator/benches/: aggregator.rs
wormhole/aggregator/src/: aggregator.rs  circuit.rs  util.rs
wormhole/aggregator/src/circuits/: tree.rs
wormhole/circuit/: Cargo.toml
wormhole/circuit-builder/: Cargo.toml
wormhole/circuit-builder/src/: lib.rs  main.rs
wormhole/circuit/src/: circuit.rs  codec.rs  inputs.rs  nullifier.rs  storage_proof.rs  substrate_account.rs  unspendable_account.rs
wormhole/circuit/src/storage_proof/: leaf.rs  mod.rs
wormhole/example/: Cargo.toml
wormhole/prover/: Cargo.toml
wormhole/prover/benches/: prover.rs
wormhole/prover/src/: lib.rs
wormhole/tests/: Cargo.toml
wormhole/tests/src/: circuit_helpers.rs
wormhole/tests/src/aggregator/: aggregator_tests.rs  circuit_tests.rs  mod.rs
wormhole/tests/src/circuit/: circuit_data_tests.rs  nullifier_tests.rs  storage_proof_tests.rs  substrate_account_tests.rs  test_helpers.rs  unspendable_account_tests.rs  utils_tests.rs
wormhole/tests/src/prover/: prover_tests.rs
wormhole/tests/src/verifier/: verifier_tests.rs
wormhole/tests/test-helpers/: Cargo.toml
wormhole/tests/test-helpers/src/: lib.rs
wormhole/verifier/: Cargo.toml
wormhole/verifier/benches/: verifier.rs
wormhole/verifier/src/: lib.rs
