[workspace]
members = ["aggregator", "circuit", "prover", "verifier"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.98", default-features = false }
plonky2 = { git = "https://github.com/Quantus-Network/plonky2", default-features = false, features = ["no_random"] }
poseidon-resonance = { git = "https://github.com/Quantus-Network/poseidon-resonance" }
hex = { version = "0.4.3", default-features = false }
criterion = { version = "0.5.1", features = ["html_reports"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Quantus Network"]
description = "Wormhole circuit implementation using Plonky2"
license = "MIT"
