[package]
name = "wormhole-aggregator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
plonky2.workspace = true
poseidon-resonance.workspace = true
wormhole-circuit = { path = "../circuit" }
wormhole-prover = { path = "../prover" }
wormhole-verifier = { path = "../verifier" }

[features]
testing = [
  "wormhole-circuit/testing",
  "wormhole-verifier/testing",
  "wormhole-prover/testing",
]
