[package]
name = "wormhole-circuit"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true, optional = true } # std only
plonky2 = { workspace = true, default-features = false } 
hex = { workspace = true }

[features]
default = ["std"]
std = [
    "anyhow",
    "plonky2/std", # assuming plonky2 follows this pattern
]

# Optional: for runtime compatibility
no_std = []
