[package]
name = "wormhole-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
plonky2 = { workspace = true, default-features = false }
wormhole-circuit = { path = "../circuit", default-features = false }
rand = { workspace = true }

[features]
default = ["std"]
std = [
    "anyhow/std",
    "plonky2/std",
    "wormhole-circuit/std",
    "rand/std",
]
no_std = []

[[bench]]
name = "prover_bench"
harness = false

[dev-dependencies]
criterion = { workspace = true }