[package]
name = "wormhole-verifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
plonky2 = { workspace = true, default-features = false }
hex = { workspace = true }
rand = { workspace = true }
wormhole-circuit = { path = "../circuit", default-features = false }

[dev-dependencies]
criterion = { workspace = true }
wormhole-prover = { path = "../prover" }

[features]
default = ["std"]
std = [
    "anyhow/std",
    "hex/std",
    "plonky2/std",
    "rand/std",
    "wormhole-circuit/std"
]
no_std = []
