[package]
name = "vote-circuit"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
plonky2 = { workspace = true }
circuit-common = { path = "../circuit-common" }

[features]
default = ["std"]
std = ["anyhow/std", "plonky2/std", "circuit-common/std"]
no_std = ["circuit-common/no_std"]
