[package]
name = "voting"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
plonky2 = { workspace = true }
common = { path = "../common" }

[features]
default = ["std"]
std = ["anyhow/std", "plonky2/std", "common/std"]
no_std = ["common/no_std"]
