[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "qp-wormhole-circuit"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
qp-plonky2 = { workspace = true }
zk-circuits-common = { package = "qp-zk-circuits-common", version = "0.1.1", path = "../../common", default-features = false }

[features]
default = ["std"]
std = ["anyhow/std", "qp-plonky2/std", "zk-circuits-common/std"]

[lints]
workspace = true
